syntax = "proto3";

package productservice.proto;

import "google/protobuf/wrappers.proto";
import "product_service_common.proto";

service ProductServiceProduct {
	rpc Create (GrpcCreateProductDto) returns (GrpcResponseDto);
	rpc Update (GrpcUpdateProductDto) returns (GrpcResponseDto);
	rpc Delete (GrpcDeleteProductDto) returns (GrpcResponseDto);
}

message GrpcCreateProductDto {
	string created_by = 1;
	string name = 2;
	string description = 3;
	google.protobuf.DoubleValue price = 4;
	google.protobuf.Int32Value stock_quantity = 5;
	string category_id = 6;
}

message GrpcUpdateProductDto {
	string id = 1;
	string updated_by = 2;
	google.protobuf.StringValue title = 3;
	google.protobuf.StringValue description = 4;
	google.protobuf.DoubleValue price = 5;
	google.protobuf.Int32Value stock_quantity = 6;
	string category_id = 7;
}

message GrpcDeleteProductDto {
	string id = 1;
	string deleted_by = 2;
}